--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-  <body>
+  <body class="bg-gray-800">
   <!-- Page content-->
   <app-root></app-root>
 
